# open62541-sys

./: .gitmodules  .justfile  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs  clippy.toml  wrapper.c  wrapper.h
.github/workflows/: latest-dependencies.yaml  pre-commit.yaml  publish-release.yaml  test.yaml
src/: bindings.rs  lib.rs
tests/: integration.rs  integration_test.rs  server_client.rs
